<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context="com.wordpress.fruitything.superapp.MainActivity">


    <ScrollView
        android:id="@+id/MainMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#f4f4f4"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSocial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/infoSocial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="106dp"
                    android:layout_marginTop="36dp"
                    android:layout_toEndOf="@+id/imageSocial"
                    android:text="@string/socialopts"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageSocial"
                    android:layout_width="106dp"
                    android:layout_height="83dp"
                    app:srcCompat="@drawable/team" />

                <TextView
                    android:id="@+id/CatSocial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="106dp"
                    android:layout_toEndOf="@+id/imageSocial"
                    android:text="@string/Social"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardShop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardSocial">

                <TextView
                    android:id="@+id/infoShop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="106dp"
                    android:layout_marginTop="42dp"
                    android:layout_toEndOf="@+id/imageShop"
                    android:text="@string/shopopts"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageShop"
                    android:layout_width="110dp"
                    android:layout_height="83dp"
                    app:srcCompat="@drawable/shopping2" />

                <TextView
                    android:id="@+id/catShop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="106dp"
                    android:layout_toEndOf="@+id/imageShop"
                    android:text="@string/shop"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardShop">

                <TextView
                    android:id="@+id/infoPay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="106dp"
                    android:layout_marginTop="42dp"
                    android:layout_toEndOf="@+id/imagepay"
                    android:text="@string/payopts"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imagepay"
                    android:layout_width="106dp"
                    android:layout_height="83dp"
                    app:srcCompat="@drawable/pay" />

                <TextView
                    android:id="@+id/catpay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="106dp"
                    android:layout_toEndOf="@+id/imagepay"
                    android:text="@string/pay"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardTravel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="visible"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardPay">

                <TextView
                    android:id="@+id/infoTravel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="106dp"
                    android:layout_marginTop="38dp"
                    android:layout_toEndOf="@+id/imageTravel"
                    android:text="@string/travelopts"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageTravel"
                    android:layout_width="106dp"
                    android:layout_height="83dp"
                    app:srcCompat="@drawable/airplane" />

                <TextView
                    android:id="@+id/catTravel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="106dp"
                    android:layout_toEndOf="@+id/imageTravel"
                    android:text="@string/travel"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <WebView
            android:id="@+id/myWebView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/tabLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/transparentBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparentBack"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/listView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:visibility="gone" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/listBack"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

    </ListView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="false"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:tabIndicatorColor="@android:color/holo_orange_dark"
        app:tabSelectedTextColor="@android:color/holo_orange_dark"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Caption"
        app:tabTextColor="@android:color/darker_gray"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/socialTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/team"
            android:text="@string/Social"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="680dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/shopTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/shopping2"
            android:text="@string/shop"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="680dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/payTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/pay"
            android:text="@string/pay"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="680dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/travelTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/airplane"
            android:text="@string/travel"
            tools:layout_editor_absoluteX="249dp"
            tools:layout_editor_absoluteY="680dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/settingsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/settings"
            android:text="@string/setting"
            tools:layout_editor_absoluteX="331dp"
            tools:layout_editor_absoluteY="680dp" />
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/nightMode"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/nightModeColour"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:background="@drawable/homeview"
        android:contentDescription="@string/start_image"
        android:cropToPadding="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homeview"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/about"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/about"
        android:contentDescription="@string/about_image"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/about"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <WebView
        android:id="@+id/privacyPolicy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </WebView>

    <Button
        android:id="@+id/privacyOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="#94ffae00"
        android:elevation="14dp"
        android:text="@string/ok"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>
